@@ -14,7 +14,7 @@
 # You should have received a copy of the GNU General Public License
 # (for example COPYING); If not, see <http://www.gnu.org/licenses/>.
 #
-# $Id: update-smart-drivedb.in 4351 2016-10-17 18:53:40Z chrfranke $
+# $Id: update-smart-drivedb.in 4360 2016-11-04 21:24:28Z chrfranke $
 #
 
 set -e
@@ -39,6 +39,9 @@ BRANCH="@DRIVEDB_BRANCH@"
 # Default drivedb location
 DRIVEDB="$drivedbdir/drivedb.h"
 
+# GnuPG used to verify signature (disabled if empty)
+GPG=gpg
+
 # Smartctl used for syntax check
 SMARTCTL="$sbindir/smartctl"
 
@@ -60,16 +63,18 @@ Usage: $myname [OPTIONS] [DESTFILE]
                     svn (SVN repository via HTTPS) [default]
                     svni (SVN repository via HTTP)
                     trac (Trac code browser via HTTPS)
+  --trunk         Download from SVN trunk (may require '--no-verify')
   --cacert FILE   Use CA certificates from FILE to verify the peer
   --capath DIR    Use CA certificate files from DIR to verify the peer
   --insecure      Don't abort download if certificate verification fails
+  --no-verify     Don't verify signature
+  --export-key    Print the OpenPGP/GPG public key block
   --dryrun        Print download commands only
   -v              Verbose output
 
 Updates $DRIVEDB
-or DESTFILE from smartmontools SVN repository.
-Tries to download first from branch $BRANCH
-and then from trunk.
+or DESTFILE from branches/$BRANCH of smartmontools
+SVN repository.
 EOF
   exit 1
 }
@@ -152,7 +157,7 @@ vrun2()
 # download URL FILE
 download()
 {
-  local f u se rc
+  local f u rc
   u=$1; f=$2
   rc=0
 
@@ -210,15 +215,122 @@ download()
   return $rc
 }
 
+# check_file FILE FIRST_CHAR MIN_SIZE MAX_SIZE
+check_file()
+{
+  local firstchar f maxsize minsize size
+  test -z "$dryrun" || return 0
+  f=$1; firstchar=$2; minsize=$3; maxsize=$4
+
+  # Check first chars
+  case `dd if="$f" bs=1 count=1 2>/dev/null` in
+    $firstchar) ;;
+    \<) echo "HTML error message"; return 1 ;;
+    *)   echo "unknown file contents"; return 1 ;;
+  esac
+
+  # Check file size
+  size=`wc -c < "$f"`
+  if test "$size" -lt $minsize; then
+    echo "too small file size $size bytes"
+    return 1
+  fi
+  if test "$size" -gt $maxsize; then
+    echo "too large file size $size bytes"
+    return 1
+  fi
+  return 0
+}
+
+# unexpand_svn_id < INFILE > OUTFILE
+unexpand_svn_id()
+{
+  sed 's,\$''Id'': drivedb\.h [0-9][0-9]* 2[-0-9]* [012][:0-9]*Z [a-z][a-z]* \$,$''Id''$,'
+}
+
+# Smartmontools Signing Key (through 2018)
+# <smartmontools-database@lists.sourceforge.net>
+# Key ID DFD22559
+public_key="\
+-----BEGIN PGP PUBLIC KEY BLOCK-----
+
+mQENBFgOYoEBCAC93841SlFmpp6640hKUvZ8PbZR6OGnZnMXD6QRVzpibXGZXUDB
+f6unujun5Ql4ObAWt6QuRqz5Gk2gF8tcOfN6edR/uK5gyX2rlWVLoZKOV91a3aDI
+iIDh018tLWOpHg3VxgHL6f0iMcFogUYnD5zhC5Z2GVhFb/cVpj+ocZWcxQLQGPVv
+uZPUQWrvdpFEzcnxPMtJJDqXEChzhrdFTXGm69ERxULOro7yDmG1Y5xWmhdGnPPM
+cuCXVVlADz/Gh1w+ay7RqFnzPjqjQmHAuggns467TJEcS0yiX4LJnEoKLyPGen9L
+FH6z38xHCNt4Da05/OeRgXwVLH9M95lu8d6TABEBAAG0V1NtYXJ0bW9udG9vbHMg
+U2lnbmluZyBLZXkgKHRocm91Z2ggMjAxOCkgPHNtYXJ0bW9udG9vbHMtZGF0YWJh
+c2VAbGlzdHMuc291cmNlZm9yZ2UubmV0PokBPgQTAQIAKAUCWA5igQIbAwUJBBwN
+AAYLCQgHAwIGFQgCCQoLBBYCAwECHgECF4AACgkQ84djzt/SJVldMQf+MxE3PM70
+mnIr/Dcrubt8AA3JeMkThNV2xFe9Rdkl4tJ1ogU8T5PCgMqJ4Gei9mUmbiQu1CKL
+Sf9k/oxBRcLZK8Fav+BMj0+4YERfZx7JQzou3f0RX8u3pc/+pRXLE6lH/Luk453N
+zqM3tCFyWgw89dEzFlwYpWx7AfxiFwvHShEPNKZdEp+aBAu8oW9lSKiwLNFsembS
+GVh+5+3yMiKK02oOdC/NPKTnxxDgvzl4Ulm3dNjI3uuBtFNFvs6qKk8CXV9AfM29
+93QxaCtRMph/ymqX4zXcecvJYpn3vulFbAzDTzge7TVhkmaupzDNLeE8IS5sgUjS
+OM1x3+2SkBiVSYkBHAQTAQIABgUCWA5kYwAKCRDfDxpJxKSQOp+/CADTlsgisoXI
+6b+0oohRaD4ZVl5eBtkvTrxNQf6EF7Z1uPkVOqi1OLWFGyAmbeLcRmN6c4/DVcaa
+6GAG7GA+KQwVPRCyC+9Ibsn/+uG6ZFXAez+0eG9NxOfkCnYH8ZP8o2VH+9uKJlGG
+ujh9o5r1SNGVifoLGTc8NkWCW+MAKj8dw8WW+wDc80YrdCRrSyLrRU9NLTSE4pIJ
+WKcHLwG63xkXHQPPR1lsJgzdAalfEv1TQdIF3sM+GXp4lZ6buahFDiILBh1vj+5C
+9TdpWZAlqHDYFICa7Rv/MvQa4O9UUl3SlN3sed8zwAmL3HeoXE5tBu8iatMaS9e3
+BmSsVYlhd/q+iQEcBBMBAgAGBQJYDmSWAAoJEC/N7AvTrxqr8HsH+QGQuhHYt9Sy
+ccd8AF36psyT03mqgbGLMZL8H9ngoa9ZqVMq7O8Aqz23SGTtuNuw6EyrcHo7Dy13
+11GftshI6arsFNJxE2ZNGIfGocRxu9m3Ez+AysWT9sxz/haHE+d58NTg+/7R8YWS
+1q+Tk6m8dA0Xyf3tMBsIJfj0zJvuGMbCLmd93Yw4nk76qtSn9UHbnf76UJN5SctA
+d8+gK3uO6O4XDcZqC06xkWKl193lzcC8sZJBdI15NszC3y/epnILDDMBUNQMBm/X
+lCYQUetyrJnAVzFGXurtjEXQ/DDnbfy2Z8efoG8rtq7v3fxS1TC5jSVOIEqOE4Tw
+zRz1Y/dfqSU=
+=KceO
+-----END PGP PUBLIC KEY BLOCK-----
+"
+
+# gpg_verify FILE.asc FILE
+gpg_verify()
+{
+  local gnupgtmp opts out rc
+  opts="--quiet ${q:+--no-secmem-warnin} --batch --no-tty"
+
+  # Create temp home dir
+  gnupgtmp="$tmpdir/.gnupg.$$.tmp"
+  rm -f -r "$gnupgtmp"
+  mkdir "$gnupgtmp" || exit 1
+  chmod 0700 "$gnupgtmp"
+
+  # Import public key
+  "$GPG" $opts --homedir="$gnupgtmp" --import <<EOF
+$public_key
+EOF
+  test $? = 0 || exit 1
+
+  # Verify
+  rc=0
+  out=`"$GPG" $opts --homedir="$gnupgtmp" --verify "$1" "$2" </dev/null 2>&1` || rc=1
+  vecho "$out"
+
+  rm -f -r "$gnupgtmp"
+  return $rc
+}
+
+# mv_all PREFIX OLD NEW
+mv_all()
+{
+  mv "${1}${2}"         "${1}${3}"
+  mv "${1}${2}.raw"     "${1}${3}.raw"
+  mv "${1}${2}.raw.asc" "${1}${3}.raw.asc"
+}
+
 # Parse options
 smtctl=$SMARTCTL
 tool=
 url=
 q="-q"
 dryrun=
+trunk=
 cacert=
 capath=
 insecure=
+no_verify=
 
 while true; do case $1 in
   -s)
@@ -240,6 +352,9 @@ while true; do case $1 in
   --dryrun)
     dryrun=t ;;
 
+  --trunk)
+    trunk=trunk ;;
+
   --cacert)
     shift; test -n "$1" || usage
     cacert=$1 ;;
@@ -250,6 +365,15 @@ while true; do case $1 in
 
   --insecure)
     insecure=t ;;
+
+  --no-verify)
+    no_verify=t ;;
+
+  --export-key)
+    cat <<EOF
+$public_key
+EOF
+    exit 0 ;;
 
   -*)
     usage ;;
@@ -294,95 +418,100 @@ case "$tool:$insecure" in
   lynx:t) warning "'--insecure' is ignored if '-t lynx' is used" ;;
 esac
 
-# Try possible branch first, then trunk
-errmsg=
-errmsg2=
-for location in "branches/$BRANCH" "trunk"; do
-  test -z "$errmsg" || errmsg2=$errmsg
-  vecho "Download from $location with $tool"
+# Check for smartctl
+if [ "$smtctl" != "-" ]; then
+  "$smtctl" -V >/dev/null 2>&1 \
+  || error "$smtctl: not found ('-s -' to ignore)"
+fi
 
-  # Adjust URL
-  case $location in
-    trunk) src=$url ;;
-    *)     src=`echo "$url" | sed "s,/trunk/,/$location/,"` ;;
-  esac
+# Check for GnuPG
+if [ -z "$no_verify" ]; then
+  test -n "$GPG" \
+  || error "GnuPG is not available ('--no-verify' to ignore)"
+  "$GPG" --version >/dev/null 2>&1 \
+  || error "$GPG: not found ('--no-verify' to ignore)"
+fi
 
-  # Download
-  test -n "$dryrun" || rm -f "$DEST.new" || exit 1
-  rc=0
-  download "$src" "$DEST.new" || rc=$?
-  test -z "$dryrun" || continue
+# Use destination directory as temp directory for gpg
+tmpdir=`dirname "$DEST"`
 
-  errmsg=
-  if [ $rc != 0 ]; then
-    errmsg="download from $location failed ($tool: exit $rc)"
-    continue
-  fi
+# Adjust URLs
+src=`echo "$url" | sed "s,/trunk/,/branches/$BRANCH/,"`
+src_asc=`echo "$src" | sed "s,/drivedb\.h,/drivedb.h.raw.asc,"`
+test -z "$trunk" || src=$url
 
-  # Check file contents
-  case `sed 1q "$DEST.new"` in
-    /*) ;;
-    \<*)
-      errmsg="download from $location failed (HTML error message)"
-      continue ;;
-    *)
-      errmsg="download from $location failed (Unknown file contents)"
-      continue ;;
-  esac
+# Download
+test -n "$dryrun" || rm -f "$DEST.new" "$DEST.new.raw" "$DEST.new.raw.asc"
 
-  # Check file size
-  size=`wc -c < "$DEST.new"`
-  if [ "$size" -lt 10000 ]; then
-    errmsg="download from $location failed (too small file size $size bytes)"
-    continue
-  fi
-  if [ "$size" -gt 1000000 ]; then
-    errmsg="download from $location failed (too large file size $size bytes)"
-    break
-  fi
+vecho "Download ${trunk:-branches/$BRANCH}/drivedb.h with $tool"
+rc=0
+download "$src" "$DEST.new" || rc=$?
+if [ $rc != 0 ]; then
+  rm -f "$DEST.new"
+  error "${trunk:-$BRANCH}/drivedb.h: download failed ($tool: exit $rc)"
+fi
+if ! errmsg=`check_file "$DEST.new" '/' 10000 1000000`; then
+  mv "$DEST.new" "$DEST.error"
+  error "$DEST.error: $errmsg"
+fi
 
-  break
-done
+vecho "Download branches/$BRANCH/drivedb.h.raw.asc with $tool"
+rc=0
+download "$src_asc" "$DEST.new.raw.asc" || rc=$?
+if [ $rc != 0 ]; then
+  rm -f "$DEST.new" "$DEST.new.raw.asc"
+  error "$BRANCH/drivedb.h.raw.asc: download failed ($tool: exit $rc)"
+fi
+if ! errmsg=`check_file "$DEST.new.raw.asc" '-' 200 2000`; then
+  rm -f "$DEST.new"
+  mv "$DEST.new.raw.asc" "$DEST.error.raw.asc"
+  error "$DEST.error.raw.asc: $errmsg"
+fi
 
 test -z "$dryrun" || exit 0
 
-if [ -n "$errmsg" ]; then
-  rm -f "$DEST.new"
-  test -z "$errmsg2" || echo "$myname: $errmsg2" >&2
-  error "$errmsg"
-fi
+# Create raw file with unexpanded SVN Id
+# (This assumes newlines are LF and not CR/LF)
+unexpand_svn_id < "$DEST.new" > "$DEST.new.raw"
 
-# Adjust timestamp and permissions
-touch "$DEST.new"
-chmod 0644 "$DEST.new"
+# Adjust timestamps and permissions
+touch "$DEST.new" "$DEST.new.raw" "$DEST.new.raw.asc"
+chmod 0644 "$DEST.new" "$DEST.new.raw" "$DEST.new.raw.asc"
+
+if [ -z "$no_verify" ]; then
+  # Verify raw file
+  if ! gpg_verify "$DEST.new.raw.asc" "$DEST.new.raw"; then
+    mv_all "$DEST" ".new" ".error"
+    test -n "$trunk" || error "$DEST.error.raw: *** BAD signature ***"
+    error "$DEST.error.raw: signature from branch no longer valid ('--no-verify' to ignore)"
+  fi
+fi
 
 if [ "$smtctl" != "-" ]; then
   # Check syntax
-  rm -f "$DEST.error"
-  if "$smtctl" -B "$DEST.new" -P showall >/dev/null; then
-    test -n "$q" || echo "$smtctl: syntax OK"
-  else
-    mv "$DEST.new" "$DEST.error"
-    echo "$DEST.error: rejected by $smtctl, probably no longer compatible" >&2
-    exit 1
+  if ! "$smtctl" -B "$DEST.new" -P showall >/dev/null; then
+    mv_all "$DEST" ".new" ".error"
+    error "$DEST.error: rejected by $smtctl, probably no longer compatible"
   fi
+  vecho "$smtctl: syntax OK"
 fi
 
 # Keep old file if identical, ignore missing Id keyword expansion in new file
 rm -f "$DEST.lastcheck"
 if [ -f "$DEST" ]; then
-  if    cmp "$DEST" "$DEST.new" >/dev/null 2>/dev/null \
-     || cat "$DEST" | sed 's|\$''Id''[^$]*\$|$''Id''$|' \
-        | cmp - "$DEST.new" >/dev/null 2>/dev/null; then
-    rm -f "$DEST.new"
+  if    cmp "$DEST.raw"     "$DEST.new.raw"     >/dev/null 2>&1 \
+     && cmp "$DEST.raw.asc" "$DEST.new.raw.asc" >/dev/null 2>&1 \
+     && {   cmp "$DEST"     "$DEST.new" >/dev/null 2>&1 \
+         || cmp "$DEST.raw" "$DEST.new" >/dev/null 2>&1; }
+  then
+    rm -f "$DEST.new" "$DEST.new.raw" "$DEST.new.raw.asc"
     touch "$DEST.lastcheck"
     echo "$DEST is already up to date"
     exit 0
   fi
-  mv "$DEST" "$DEST.old"
+  mv_all "$DEST" "" ".old"
 fi
 
-mv "$DEST.new" "$DEST"
+mv_all "$DEST" ".new" ""
 
-echo "$DEST updated from $location"
-
+echo "$DEST updated from ${trunk:-branches/$BRANCH}${no_verify:+ (NOT VERIFIED)}"
